# resume-tailor

./: README.md  pyproject.toml  start.sh
backend/: job_index.py  job_search.py  latex_generator.py  main.py  prompts.py  schemas.py  state.py  utils.py
backend/data/: offline_jobs.jsonl
docs/: resume.txt
frontend/: api_client.py  app.py
resume-template/template1/: resume.cls  zh_CN-Adobefonts_external.sty
resume-template/template2/: resume.cls
