[project]
name = "resume-tailor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.3.7",
    "dotenv>=0.9.9",
    "fastapi>=0.121.2",
    "langchain>=1.0.7",
    "langchain-openai>=1.0.3",
    "pdfplumber>=0.11.8",
    "playwright>=1.56.0",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.20",
    "sentence-transformers>=5.2.0",
    "streamlit>=1.51.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.38.0",
]
